<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Camera102</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="camera">Camera</string>
    <string name="edit_picture">Edit Picture</string>
    <string name="edit_video">Edit Video</string>
    <string name="exit">Exit</string>
    <string name="about">This app was developed by the Group 11 Team.</string>
    <string name="about2">Thanks for use this app!</string>
    <string name="confirm_delete">Do you want to delete the original media file?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="uriCameraImage">/DCIM/Camera</string>

</resources>