<?xml version="1.0" encoding="utf-8"?>
<!--
layout/mainmenu
***
@author: Dang Xuan Binh 11-C 
 -->
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/FrameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:paddingTop="0sp" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:gravity="center_vertical|center_horizontal"
        android:orientation="vertical" >

        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="200dp"
            android:gravity="center_vertical|center_horizontal"
            android:src="@drawable/ic_launcher" />

        <TextView
            android:id="@+id/SplashTextView"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|center_horizontal"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/app_name"
            android:textColor="#0000A0"
            android:textSize="30dp" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical|center_horizontal"
            android:orientation="vertical"
            android:padding="10sp" >

            <Button
                android:id="@+id/TakePictureButton"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/camera"
                android:textColor="#FFFFFF" >
            </Button>

            <Button
                android:id="@+id/ChoosePictureButton"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/edit_picture"
                android:textColor="#FFFFFF" >
            </Button>

            <Button
                android:id="@+id/ChooseVideoButton"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/edit_video"
                android:textColor="#FFFFFF" >
            </Button>

            <Button
                android:id="@+id/exit"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/exit" 
                android:textColor="#FFFFFF"
                >
            </Button>
        </LinearLayout>
    </LinearLayout>

</FrameLayout>